# rf_detr_axera

./: README.md  axera_infer.py  onnx_export.py  onnx_infer.py  pyproject.toml
model_convert/: README.md  pulsar2_log_rf-detr-nano_sim_8bit.txt  rf-detr-nano_sim_16bit.json  rf-detr-nano_sim_8bit.json
