[project]
name = "rf-detr-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnx-graphsurgeon>=0.5.8",
    "onnxruntime>=1.22.1",
    "onnxsim>=0.4.36",
    "onnxslim>=0.1.61",
    "opencv-python>=4.11.0.86",
    "rfdetr>=1.2.1",
]
